--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 Django = "^4.0.1"
 gunicorn = "^20.1.0"
 whitenoise = "^5.3.0"
+djangorestframework = "^3.13.1"
 
 [tool.poetry.dev-dependencies]
 
