--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ Django = "^4.0.1"
 gunicorn = "^20.1.0"
 whitenoise = "^5.3.0"
 djangorestframework = "^3.13.1"
+flake8 = "^4.0.1"
+black = "^22.1.0"
 
 [tool.poetry.dev-dependencies]
 
