--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ whitenoise = "^5.3.0"
 djangorestframework = "^3.13.1"
 flake8 = "^4.0.1"
 black = "^22.1.0"
+djangorestframework-simplejwt = "^5.0.0"
+drf-spectacular = "^0.21.2"
+django-cors-headers = "^3.11.0"
 
 [tool.poetry.dev-dependencies]
 
